[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Themes/BattleTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/UI/GFX/Panel.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.819608, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 20
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00860596, 0.236129, 0.734375, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerPanel" type="Panel" parent="."]
margin_left = 301.0
margin_top = 736.0
margin_right = 832.0
margin_bottom = 1024.0
theme = ExtResource( 2 )

[node name="PlayerTeamLabel" type="Label" parent="PlayerPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.5
margin_top = -123.0
margin_right = -180.5
margin_bottom = -63.0
theme = ExtResource( 2 )
text = "Sven"

[node name="HpProgressBar" type="ProgressBar" parent="PlayerPanel"]
margin_left = 113.0
margin_top = 19.0
margin_right = 497.0
margin_bottom = 56.0
theme = ExtResource( 2 )
rounded = true
percent_visible = false

[node name="CurrentHP" type="Label" parent="PlayerPanel/HpProgressBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -16.5
margin_right = 178.0
margin_bottom = 14.5
align = 2
clip_text = true

[node name="Slash" type="Label" parent="PlayerPanel/HpProgressBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 178.0
margin_top = -14.5
margin_right = 218.0
margin_bottom = 16.5
text = "/"
align = 1
clip_text = true

[node name="MaxHP" type="Label" parent="PlayerPanel/HpProgressBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 218.0
margin_top = -16.5
margin_right = 378.0
margin_bottom = 14.5
clip_text = true

[node name="TimerPanel" type="Panel" parent="."]
margin_left = 22.0
margin_top = 736.0
margin_right = 300.0
margin_bottom = 1024.0
theme = ExtResource( 2 )

[node name="TimeProgressBar" type="ProgressBar" parent="TimerPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -120.0
margin_right = 266.0
margin_bottom = -96.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
rounded = true
percent_visible = false

[node name="BadGuyPanel" type="Panel" parent="."]
margin_left = 832.0
margin_top = 736.0
margin_right = 1904.0
margin_bottom = 1024.0
theme = ExtResource( 2 )

[node name="EnemyTeamLabel" type="Label" parent="BadGuyPanel"]
margin_top = 19.0
margin_right = 1056.0
margin_bottom = 50.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="EnemyTeamLabel2" type="Label" parent="BadGuyPanel"]
margin_top = 56.0
margin_right = 1056.0
margin_bottom = 87.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="EnemyTeamLabel3" type="Label" parent="BadGuyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 96.0
margin_right = -8.0
margin_bottom = -161.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="EnemyTeamLabel4" type="Label" parent="BadGuyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 136.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="EnemyTeamLabel5" type="Label" parent="BadGuyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 176.0
margin_right = -8.0
margin_bottom = -81.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="EnemyTeamLabel6" type="Label" parent="BadGuyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 216.0
margin_right = -8.0
margin_bottom = -41.0
theme = ExtResource( 2 )
text = "Monster Name"
align = 1

[node name="InputPopUpMenu" type="Control" parent="."]
visible = false
margin_left = 16.0
margin_top = 707.0
margin_right = 304.0
margin_bottom = 1027.0

[node name="InputBGPanel" type="Panel" parent="InputPopUpMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -35.0
theme = ExtResource( 2 )

[node name="AttackPanel" type="NinePatchRect" parent="InputPopUpMenu/InputBGPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 21.0
margin_right = -8.0
margin_bottom = -208.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="AttackButton" type="Button" parent="InputPopUpMenu/InputBGPanel"]
margin_left = 16.0
margin_top = 26.0
margin_right = 272.0
margin_bottom = 69.0
text = "Attack"

[node name="DoSomethingPanel" type="NinePatchRect" parent="InputPopUpMenu/InputBGPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 79.0
margin_right = -8.0
margin_bottom = -150.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="DoSomething" type="Button" parent="InputPopUpMenu/InputBGPanel"]
margin_left = 16.0
margin_top = 85.0
margin_right = 272.0
margin_bottom = 128.0
